--- a/k8s/k8sPodTemplate.yaml
+++ b/k8s/k8sPodTemplate.yaml
@@ -11,7 +11,7 @@ spec:
     runAsNonRoot: false
   containers:
   - name: jenkins-agent
-    image: <AWS-ACCOUNT-ID>.dkr.ecr.<AWS-REGION>.amazonaws.com/test-jenkins-agent:latest # Enter the jenkins inbound agent image.
+    image: 656096645154.dkr.ecr.eu-central-1.amazonaws.com/test-jenkins-agent:latest
     command:
     - cat
     tty: true
