--- a/k8s/k8sPodTemplate.yaml
+++ b/k8s/k8sPodTemplate.yaml
@@ -11,7 +11,7 @@ spec:
     runAsNonRoot: false
   containers:
   - name: jenkins-agent
-    image: 656096645154.dkr.ecr.eu-central-1.amazonaws.com/test-jenkins-agent:latest
+    image: 106036894611.dkr.ecr.eu-central-1.amazonaws.com/test-jenkins-agent-2:latest
     command:
     - cat
     tty: true
