--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: 106036894611.dkr.ecr.eu-central-1.amazonaws.com/eureka-server
         ports:
         - containerPort: 80
